--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,11 +10,6 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.yanclement.geophone.MainActivity">
-    <LinearLayout
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:layout_width="0px"
-        android:layout_height="0px"/>
 
     <LinearLayout
         android:orientation="vertical"
@@ -27,24 +22,21 @@
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="64dp"
+            android:layout_height="wrap_content"
             android:id="@+id/ll_phone_input">
 
             <AutoCompleteTextView
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:id="@+id/actv_contact"
-                android:layout_weight="1.08"
-                android:nextFocusUp="@id/actv_contact"
-                android:nextFocusLeft="@id/actv_contact"
                 android:hint="@string/actv_hint"
                 android:textStyle="normal"
                 android:textSize="18sp" />
 
             <Button
                 android:text="Recherche"
-                android:layout_width="wrap_content"
-                android:layout_height="65dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:id="@+id/btn_search" />
         </LinearLayout>
 
