--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <group android:checkableBehavior="single">
+    <!--<group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_camera"
             android:icon="@drawable/ic_menu_camera"
@@ -18,18 +18,26 @@
             android:id="@+id/nav_manage"
             android:icon="@drawable/ic_menu_manage"
             android:title="Tools" />
-    </group>
+    </group>-->
 
-    <item android:title="Communicate">
+    <item android:title="Alerte">
         <menu>
             <item
-                android:id="@+id/nav_share"
+                android:id="@+id/nav_alert_text"
                 android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
+                android:title="@string/menu_item_labelalert" />
             <item
-                android:id="@+id/nav_send"
+                android:id="@+id/nav_setting_flash"
                 android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
+                android:title="@string/menu_item_flash_off"/>
+            <item
+                android:id="@+id/nav_setting_sound"
+                android:icon="@drawable/ic_menu_send"
+                android:title="@string/menu_item_sound_off"/>
+            <item
+                android:id="@+id/nav_setting_vibrate"
+                android:icon="@drawable/ic_menu_send"
+                android:title="@string/menu_item_vibrate_off"/>
         </menu>
     </item>
 
