--- a/app/src/main/res/layout/content_intro_to_use.xml
+++ b/app/src/main/res/layout/content_intro_to_use.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.yanclement.geophone.activity.intro.IntroToUseActivity"
+    tools:context="com.yanclement.geophone.activity.intro.IntroActivity"
     tools:showIn="@layout/activity_intro_to_use">
 
 </RelativeLayout>
